# arc-agent

./: .env.example  .gitignore  README.md  arc.py  arc_full.py  arc_v2.py  cli.py  demo_voice.py  main.py  push_changes.sh  pyproject.toml  talk.py  test_mic.py  test_tts.sh
arc/: __init__.py  config.py
arc/brain/: graph.py  memory.py
arc/core/: __init__.py  deep_agent.py  llm.py  memory.py
arc/mcp/: __init__.py  browser.py  client.py  filesystem.py  git.py  web_reader.py
arc/tools/: __init__.py  system_tools.py  whatsapp.py
arc/ui/: __init__.py  cli.py  tray.py
arc/voice/: __init__.py  loop.py  stt.py  tts.py  wake.py
tools/: verify_agent.py  verify_config.py  verify_helpers.py  verify_llm.py  verify_mcp.py  verify_memory.py  verify_stt.py  verify_system_tools.py  verify_tts.py  verify_wake.py
